[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/title_screen/custom/custom.gd" type="Script" id=2]
[ext_resource path="res://Assets/Hero/RedHero.png" type="Texture" id=3]
[ext_resource path="res://Assets/Hero/2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Hero/1.png" type="Texture" id=5]

[node name="custom" type="Node2D"]
z_index = 16
script = ExtResource( 2 )

[node name="peleryny" type="Node2D" parent="."]
position = Vector2( 0, 232 )

[node name="wybor" type="ItemList" parent="peleryny"]
margin_left = 16.0
margin_top = 24.0
margin_right = 768.0
margin_bottom = 240.0
items = [ "", ExtResource( 1 ), false, "", ExtResource( 1 ), false, "", ExtResource( 1 ), false, "", ExtResource( 1 ), false ]
allow_reselect = true
max_columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skorki" type="Node2D" parent="."]

[node name="wybor" type="ItemList" parent="skorki"]
margin_left = 16.0
margin_top = 24.0
margin_right = 1264.0
margin_bottom = 240.0
items = [ "", ExtResource( 1 ), false, "", ExtResource( 1 ), false, "", ExtResource( 1 ), false, "", ExtResource( 1 ), false ]
allow_reselect = true
max_columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="akcesoria" type="Node2D" parent="."]
position = Vector2( 0, 464 )

[node name="wybor" type="ItemList" parent="akcesoria"]
margin_left = 16.0
margin_top = 24.0
margin_right = 768.0
margin_bottom = 240.0
items = [ "", ExtResource( 1 ), false, "", ExtResource( 1 ), false, "", ExtResource( 1 ), false, "", ExtResource( 1 ), false ]
allow_reselect = true
max_columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gotowe" type="Button" parent="."]
margin_left = 1024.0
margin_top = 672.0
margin_right = 1036.0
margin_bottom = 692.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="manekin" type="Sprite" parent="."]
position = Vector2( 1040, 440 )
scale = Vector2( 16, 16 )
texture = ExtResource( 3 )
hframes = 9

[node name="peleryna" type="Sprite" parent="manekin"]
show_behind_parent = true
texture = ExtResource( 4 )
hframes = 3

[node name="akcesoria" type="Sprite" parent="manekin"]
texture = ExtResource( 5 )
hframes = 3

[connection signal="item_selected" from="peleryny/wybor" to="." method="wybranaPeleryna"]
[connection signal="item_selected" from="skorki/wybor" to="." method="wybranaSkorka"]
[connection signal="item_selected" from="akcesoria/wybor" to="." method="wybraneAkcesoria"]
[connection signal="pressed" from="gotowe" to="." method="gotowe"]
